# psc-mock-server

./: .gitignore  DESIGN.md  meson.build  pytest.ini
docs/: README.md  backlog.md  core-data-model-design.md  design-review.md  device-modeling-conventions.md  onchange-delivery-and-source-binding.md  protocol-layer-design.md  push-impl-checklist.md  store-backed-provider-template.md  test_cmd.txt  test_poll.py
docs/archive/: DESIGN.md  IMPL-CHECKLIST.md  README.md  leaf-type-and-schema-model.md  onchange-delivery-and-source-binding.md
docs/github/com/openconfig/gnmi/proto/gnmi/: gnmi_pb2.py
docs/github/com/openconfig/gnmi/proto/gnmi_ext/: gnmi_ext_pb2.py
proto/: gen_proto.py  sim_control.proto
src/: main.cpp
src/backend/: backend.cpp  backend.hpp  data_provider.hpp  gnmi_value.hpp  leaf_store.cpp  leaf_store.hpp  provider.hpp  psc_power_sensor_provider.cpp  psc_power_sensor_provider.hpp  store_backed_provider.hpp  system_config_provider.cpp  system_config_provider.hpp
src/core/: canonical_path.cpp  canonical_path.hpp  leaf_entry.hpp  leaf_id.hpp  leaf_registry.cpp  leaf_registry.hpp  leaf_sink.hpp  leaf_type.hpp  notification_group.cpp  notification_group.hpp
src/gnmi/: capabilities.cpp  get.cpp  get.h  gnmi.cpp  gnmi.h  set.cpp  set.h  subscribe.cpp  subscribe.h  subscribe_emit.cpp  subscribe_emit.h  subscription.cpp  subscription.h
src/security/: authentication.cpp  authentication.h
src/sim/: sim_control_service.cpp  sim_control_service.h
src/utils/: utils.h
tests/: test_backend.cpp  test_data_provider.cpp  test_get.cpp  test_leaf_store.cpp  test_poll.py  test_psc_provider.cpp  test_subscribe_emit.cpp  test_subscription_hub.cpp  test_system_config_provider.cpp  test_utils.cpp
tests/core/: test_canonical_path.cpp  test_integration_scenario.cpp  test_leaf_registry_registration.cpp  test_leaf_registry_structural.cpp  test_leaf_registry_values.cpp  test_leaf_sink.cpp  test_notification_group.cpp
tests/e2e/: conftest.py  gnmi_helpers.py  sim_control_pb2.py  sim_control_pb2_grpc.py  test_atomic.py  test_get_datatype.py  test_gnmic.py  test_hotplug.py  test_onchange.py  test_origin.py  test_poll.py  test_push.py  test_sample_floor.py  test_set_multileaf.py  test_set_onchange.py  test_target_defined.py  test_target_echo.py
tests/e2e/github/com/openconfig/gnmi/proto/gnmi/: gnmi_pb2_grpc.py
tests/e2e/github/com/openconfig/gnmi/proto/gnmi_ext/: gnmi_ext_pb2_grpc.py
